--- a/games/termninja/termninja.css
+++ b/games/termninja/termninja.css
@@ -39,6 +39,7 @@ html {
 }
 .fruit {
     text-align: center;
+    overflow-wrap: break-word;
     box-shadow: 0px 0px 20px #00000088;
     padding: 20px 60px;
     position: absolute;
